# bts

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
config/: orchestrator.example.toml
docs/: feature-inventory.md  fly-operations.md  optimization-ideas.md
scripts/: __init__.py  aggregate_seed_corpora.py  analyze_audit_results.py  analyze_bullpen.py  arch_eval.py  audit_attach.py  audit_driver.py  audit_experiments.txt  audit_experiments_v2.txt  audit_monotone_duplicates.py  audit_rolling_oci.py  audit_seeds_default48.txt  audit_seeds_extension_n100.txt  backtest_early_lock_gap.py  baseline_profiles_hetzner.py  bts-scheduler.service  build_corrected_mdp_policy.py  canonicalize_realized_picks.py  capture_bts_cookies.py  check_audit_progress.sh  check_doubleheaders.py  check_heartbeat.py  cron-setup-hetzner.sh  cron-setup-pi5.sh  cron-setup.sh  diff_audit_outputs.py  discover_bts_endpoints.py  experiment2_career_shrinkage_grid.sh  fly-bootstrap.sh  fly-cron-loop.sh  fly-entrypoint.sh  install-leaderboard-systemd.sh  investigate_seed_outlier.py  launch_queues_only.py  leakage_audit.py  mc_replay_ab.py  mdp_policy_sweep.py  oos_validation.py  phase1_game_vs_pa.py  phase2_audit.py  (+35 more)
tests/: conftest.py  test_audit_driver.py  test_audit_progress.py  test_bluesky_password.py  test_build_schema_assert.py  test_calibration_check.py  test_cli_integration.py  test_context_features.py  test_dm.py  test_health_endpoint.py  test_heartbeat.py  test_heartbeat_staleness.py  test_lgb_params.py  test_lineup_analyze.py  test_lineup_collect.py  test_local_tier.py  test_london_series_tz.py  test_orchestrator.py  test_orchestrator_conformal.py  test_picks.py  test_picks_conformal.py  test_picks_lineup_evolution.py  test_posting.py  test_predict_json.py  (+20 more)
(+283 files in other folders)
