[project]
name = "bts"
version = "0.1.0"
description = "Beat the Streak v2 — PA-level MLB hit prediction"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "rich>=13.0",
]

[project.optional-dependencies]
model = [
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
bts = "bts.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
