[project]
name = "bts"
version = "0.1.0"
description = "Beat the Streak v2 — PA-level MLB hit prediction"
requires-python = ">=3.12"
dependencies = [
    "atproto",
    "boto3",
    "click>=8.1",
    "httpx>=0.27",
    "oci>=2.170.0",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pyarrow>=15.0",
    "pybaseball>=2.2.7",
    "rich>=13.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
model = [
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "catboost>=1.2.5",
]

[project.scripts]
bts = "bts.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: deselect with -m 'not slow'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]",
]

[tool.uv]
# Project-level pin for the resolver's exclude-newer window. Using an absolute
# date (not "N days") so Mac and Hetzner produce byte-identical uv.lock files;
# a relative window would embed different wall-clock timestamps on each env.
# Update this line manually when refreshing the supply-chain-defense window.
exclude-newer = "2026-04-11"
